# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).

## [Unreleased]

## [0.2.0] - 2021-08-13
### Added
- feed_forward.cpp
- unit.cpp
- node_gene.cpp

## [0.1.0] - 2021-08-12
### Added
- cmake build files and documentation
- build instructions
- requirements
- activations.cpp
- system-info.cpp

### Changed
### Removed
### Fixed