@@ -1,10 +1,0 @@
-#ifndef FEED_FORWARD_HPP_
-#define FEED_FORWARD_HPP_
-
-#include <torch/torch.h>
-
-class FeedForward: public torch::nn::Module  {
-
-};
-
-#endif  // FEED_FORWARD_HPP_
